[project]
name = "comfyui-to-python-library"
description = "This custom node allows you to generate pure python code from your ComfyUI workflow with the click of a button. Great for rapid experimentation or production deployment."
version = "1.3.1"
license = { text = "MIT License" }
dependencies = ["black"]

[project.urls]
Repository = "https://github.com/austinbrown34/ComfyUI-to-Python-Library"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "austinbrown34"
DisplayName = "ComfyUI-to-Python-Library"
Icon = ""
